menu,about,sandos

--- a/app/views/home/directions.html.erb
+++ b/app/views/home/directions.html.erb
@@ -1,1 +1,20 @@
-<h1>Directions</h1>
+<div class="jumbotron">
+  <h1 align="center">Directions</h1>
+	<div align="center">
+	 <i class="fa fa-location-arrow fa-5x" aria-hidden="true"></i>
+	 <i class="fa fa-car fa-5x" aria-hidden="true"></i>
+	</div>
+
+	<div class="row">
+		<div class="col-xs-3">
+			<address align="center">
+				909 Lincoln Ave<br>
+				San Rafael, <br>
+				CA 94901
+			</address><br>
+		</div><br>
+		<div align="center">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3145.217127119147!2d-122.5264197846766!3d37.97206187972407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808599f73972eccd%3A0xb2afe167a1bcfcc3!2s909+Lincoln+Ave%2C+San+Rafael%2C+CA+94901!5e0!3m2!1sen!2sus!4v1511543016057" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+		</div>
+	</div>
+</div>
