--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,14 +4,12 @@
   <h1>Perry's Deli </h1>
   <p> San Rafael </p>
 
-  <img src="../../assets/images/logo.jpg" class="img-fluid" alt="Responsive image">
-  <img src="../../assets/images/logo.jpg" alt="logo" class="img-thumbnail">
 </div>
   <p>
   <i class="fa fa-snapchat fa-5x" aria-hidden="true" ></i>
   <i class="fa fa-instagram fa-5x" aria-hidden="true" ></i>
   <i class="fa fa-facebook fa-5x" aria-hidden="true" ></i>
-  <a class="fa fa-yelp fa-5x" aria-hidden="true" href="https://www.yelp.com/biz/perrys-delicatessen-novato?utm_campaign=www_business_share_popup&utm_medium=copy_link&utm_source=(direct)" role="button" ></a>
+  <a class="fa fa-yelp fa-5x" aria-hidden="true" href="https://www.yelp.com/biz/perrys-delicatessen-novato?utm_campaign=www_business_share_popup&utm_medium=copy_link&utm_source=(direct)" target="_blank" role="button" ></a>
   <i class="fa fa-twitter fa-5x" aria-hidden="true"></i>
   </p>
 
