added salad model

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,1 +1,6 @@
+<div align="center" class="jumbotron">
 <h1>About Us</h1>
+<%= image_tag("logo.jpg") %>
+  <%= image_tag('front.jpg', alt: 'Description', style: 'display: block; margin: auto; width: 40%;')%>
+
+</div>
