--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,8 +2,12 @@
 <div class="jumbotron">
   <h2>Welcome to </h2>
   <h1>Perry's Deli </h1>
-  <p> San Rafael </p>
-
+<!--   <%= image_tag('front.jpg', alt: 'Description', style: 'display: block; margin: auto; width: 40%;')%>
+ --><br>
+  <p> 909 Lincoln ave San Rafael, CA 94901 <br>
+<a href="tel:14154564886">1-415-456-4886</a> Fax: 415-456-8112 <br>
+Open Monday-Saturday 7am-8pm <br>
+Sunday 8am-7pm</p>
 </div>
   <p>
   <i class="fa fa-snapchat fa-5x" aria-hidden="true" ></i>
