--- a/app/views/home/sandwiches.html.erb
+++ b/app/views/home/sandwiches.html.erb
@@ -1,3 +1,13 @@
 <div class="jumbotron">
-<h1 align="center">Sandwiches</h1>
+	<h1 align="center">Sandwiches</h1>
+	<p align="center">Mayo, mustard, lettuce, tomato, pickles, and Onions.</p>
+		<ul>
+			<% @items.each do |item| %>
+			<% if item.category == "regular" %>
+				<h3 align="center"><%= item.name %></h3><p align="center"><%= item.price %></p>
+				<p align="center"><%= item.description %></p>
+				<% end %>
+			<% end %>
+		</ul>
+
 </div>
