--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 	
   </head>
 
-  <body>
+  <body class="all">
 
     <nav class="navbar navbar-light bg-faded">
       <div class="container-fluid">
